[gd_scene load_steps=16 format=3 uid="uid://bcwga5bcxj6cb"]

[ext_resource type="Script" uid="uid://bejdwmlwqmvm1" path="res://scripts/ui/lost.gd" id="1_ct5jb"]
[ext_resource type="Texture2D" uid="uid://h8lgb1y1phux" path="res://assets/UI/Buttons/Button_Blue_3Slides_Pressed.png" id="1_ugjck"]
[ext_resource type="Texture2D" uid="uid://1swawdw2lfju" path="res://assets/UI/Buttons/Button_Blue_3Slides.png" id="2_40nqn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bcaeg"]
texture = ExtResource("1_ugjck")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8x1jc"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 30.0
texture = ExtResource("2_40nqn")
region_rect = Rect2(8, 0, 177, 56.25)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3lcxj"]
content_margin_top = 48.0
content_margin_bottom = 68.0
bg_color = Color(0, 0, 0, 0.5019608)
corner_radius_top_left = 4

[sub_resource type="Theme" id="Theme_ct5jb"]
Button/font_sizes/font_size = 20
Button/styles/hover = SubResource("StyleBoxTexture_bcaeg")
Button/styles/normal = SubResource("StyleBoxTexture_8x1jc")
Label/font_sizes/font_size = 100
PanelContainer/styles/panel = SubResource("StyleBoxFlat_3lcxj")
VBoxContainer/constants/separation = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_php50"]
content_margin_left = 4.0
content_margin_top = 8.0
content_margin_right = 4.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 0.39215687)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6c5ok"]
content_margin_left = 4.0
content_margin_top = 8.0
content_margin_right = 4.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 0.39215687)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7p1qh"]
content_margin_left = 4.0
content_margin_top = 8.0
content_margin_right = 4.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 0.39215687)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d7yj7"]
content_margin_left = 4.0
content_margin_top = 8.0
content_margin_right = 4.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 0.39215687)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xwb74"]
content_margin_left = 4.0
content_margin_top = 8.0
content_margin_right = 4.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 0.39215687)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s0wou"]
content_margin_left = 4.0
content_margin_top = 8.0
content_margin_right = 4.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 0.39215687)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_geqfl"]
content_margin_left = 4.0
content_margin_top = 8.0
content_margin_right = 4.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 0.39215687)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yag10"]
content_margin_left = 4.0
content_margin_top = 8.0
content_margin_right = 4.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 0.39215687)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="lost" type="CanvasLayer"]
script = ExtResource("1_ct5jb")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_ct5jb")

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_top = 1.0
offset_right = 1152.0
offset_bottom = 646.0

[node name="MasterVBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CenterContainer/MasterVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 120
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer1" type="VBoxContainer" parent="CenterContainer/MasterVBox"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="WaveLabel" type="Label" parent="CenterContainer/MasterVBox/VBoxContainer1"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="CenterContainer/MasterVBox/VBoxContainer1"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/MasterVBox"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 6

[node name="Restart" type="Button" parent="CenterContainer/MasterVBox/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_php50")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6c5ok")
theme_override_styles/hover = SubResource("StyleBoxFlat_7p1qh")
theme_override_styles/focus = SubResource("StyleBoxFlat_d7yj7")
text = "RESTART"

[node name="Exit" type="Button" parent="CenterContainer/MasterVBox/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_xwb74")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s0wou")
theme_override_styles/hover = SubResource("StyleBoxFlat_geqfl")
theme_override_styles/focus = SubResource("StyleBoxFlat_yag10")
text = "MAIN MENU"
